--- a/template/repository.mustache
+++ b/template/repository.mustache
@@ -2,6 +2,7 @@ package {{{packagePath}}}.repository;
 
 import {{{packagePath}}}.domain.{{{modelName}}};
 import {{{packagePath}}}.domain.{{{modelName}}}Example;
+import {{{packagePath}}}.domain.{{{modelName}}}SimpleJdbcRepository;
 
 {{#tableComment}}
 /**
