--- a/template/pom.mustache
+++ b/template/pom.mustache
@@ -17,8 +17,8 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
-        <spring-boot.version>3.4.2</spring-boot.version>
-        <simple-jdbc-processor.version>1.0.0</simple-jdbc-processor.version>
+        <spring-boot.version>3.5.5</spring-boot.version>
+        <simple-jdbc-processor.version>1.0.1</simple-jdbc-processor.version>
     </properties>
 
     <dependencyManagement>
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>io.github.simple-jdbc-processor</groupId>
             <artifactId>simple-jdbc-processor-starter</artifactId>
-            <version>1.0.0</version>
+            <version>${simple-jdbc-processor.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
