--- a/template/service.mustache
+++ b/template/service.mustache
@@ -1,19 +1,24 @@
 package {{{packagePath}}}.service;
 
-import lombok.RequiredArgsConstructor;
+
 import {{{packagePath}}}.domain.{{modelName}};
 import {{{packagePath}}}.domain.{{modelName}}Example;
 import {{{packagePath}}}.repository.{{modelName}}Repository;
+import io.github.simple.jdbc.processor.BaseService;
 
 import org.springframework.stereotype.Service;
 
 import lombok.extern.slf4j.Slf4j;
 
-@RequiredArgsConstructor
 @Slf4j
 @Service
-public class {{{modelName}}}Service {
+public class {{{modelName}}}Service extends BaseService<{{{modelName}}}, {{{primaryField.fieldType}}}, {{{modelName}}}Example> {
 
     private final {{{modelName}}}Repository {{{lowerModelName}}}Repository;
+
+    public {{{modelName}}}Service({{{modelName}}}Repository {{{lowerModelName}}}Repository){
+        super({{{lowerModelName}}}Repository);
+        this.{{{lowerModelName}}}Repository = {{{lowerModelName}}}Repository;
+    }
 
 }
