--- a/template/repository.mustache
+++ b/template/repository.mustache
@@ -9,6 +9,6 @@ import {{{packagePath}}}.domain.{{{modelName}}}SimpleJdbcRepository;
  * {{tableComment}}.
  **/
 {{/tableComment}}
-public interface {{{modelName}}}Repository extends {{{modelName}}}SimpleJdbcRepository {
+public class {{{modelName}}}Repository extends {{{modelName}}}SimpleJdbcRepository {
 
 }
