--- a/template/pom.mustache
+++ b/template/pom.mustache
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
+
     <groupId>{{{packagePath}}}</groupId>
     <artifactId>{{{artifact}}}</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>{{{artifact}}}</name>
     <description>{{{artifact}}} project for Spring Boot</description>
+    <modelVersion>4.0.0</modelVersion>
 
     <properties>
         <java.version>17</java.version>
