--- a/template/pom.mustache
+++ b/template/pom.mustache
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <provider>true</provider>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
