--- a/template/pom.mustache
+++ b/template/pom.mustache
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <provider>true</provider>
+            <scope>provider</scope>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
