--- a/template/pom.mustache
+++ b/template/pom.mustache
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.6</version>
+        <version>4.0.1</version>
         <relativePath/>
     </parent>
 
@@ -18,9 +18,9 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-cloud.version>2025.0.0</spring-cloud.version>
-        <spring-boot.version>3.5.6</spring-boot.version>
-        <simple-jdbc-processor.version>1.1.2</simple-jdbc-processor.version>
+        <spring-cloud.version>2025.1.0</spring-cloud.version>
+        <spring-boot.version>4.0.1</spring-boot.version>
+        <simple-jdbc-processor.version>1.1.8</simple-jdbc-processor.version>
         <mapstruct.version>1.6.3</mapstruct.version>
     </properties>
 
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
-            <scope>provider</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
