--- a/template/pom.mustache
+++ b/template/pom.mustache
@@ -17,7 +17,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>25</java.version>
         <spring-cloud.version>2025.1.0</spring-cloud.version>
         <spring-boot.version>4.0.1</spring-boot.version>
         <simple-jdbc-processor.version>1.1.8</simple-jdbc-processor.version>
@@ -43,10 +43,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
@@ -67,7 +63,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provider</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
